Bug 113387: KmPlot crashes when the Remove action is added in a toolbar and used to remove a graph.

BUG: 113387

svn path=/branches/KDE/3.5/kdeedu/kmplot/; revision=465447