kmplot/View.cpp
@@ -1829,6 +1829,9 @@ void View::updateSliders()
 
 void View::mnuHide_clicked()
 {
+    if ( csmode == -1 )
+      return;
+    
 	Ufkt *ufkt = &m_parser->ufkt[ m_parser->ixValue(csmode)];
 	switch (cstype )
 	{
@@ -1865,6 +1868,9 @@ void View::mnuHide_clicked()
 }
 void View::mnuRemove_clicked()
 {
+  if ( csmode == -1 )
+    return;
+  
 	if ( KMessageBox::warningContinueCancel(this,i18n("Are you sure you want to remove this function?"), QString::null, KStdGuiItem::del()) == KMessageBox::Continue )
 	{
 		Ufkt *ufkt =  &m_parser->ufkt[m_parser->ixValue(csmode)];
@@ -1888,6 +1894,8 @@ void View::mnuRemove_clicked()
 }
 void View::mnuEdit_clicked()
 {
+  if ( csmode == -1 )
+    return;
 	if ( m_parser->ufkt[m_parser->ixValue(csmode)].fstr[0] == 'x') // a parametric function
 	{
 		int y_index = csmode+1; //the y-function
@@ -1919,12 +1927,18 @@ void View::mnuEdit_clicked()
 
 void View::mnuCopy_clicked()
 {
+  if ( csmode == -1 )
+  return;
+  
 	if ( m_parser->sendFunction(csmode) )
 		m_modified = true;
 }
 
 void View::mnuMove_clicked()
 {
+  if ( csmode == -1 )
+    return;
+  
 	if ( m_parser->sendFunction(csmode) )
 	{
 	  	if (!m_parser->delfkt(csmode) )
